[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "tap-dbt"
description = "Singer tap for dbt, built with the Singer SDK."
readme = "README.md"
keywords = [
  "dbt",
  "elt",
  "singer-sdk",
  "singer.io",
]
license = "Apache-2.0"
maintainers = [
  { name = "Edgar Ramírez Mondragón", email = "edgarrm358@sample.com" },
]
authors = [
  { name = "Edgar Ramírez Mondragón", email = "edgarrm358@sample.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "backports-datetime-fromisoformat~=2.0.1; python_version<'3.11'",
  "pyyaml~=6.0",
  "requests~=2.32.0",
  "singer-sdk~=0.47.0",
]

urls.Documentation = "https://github.com/MeltanoLabs/tap-dbt/blob/main/README.md"
urls.Homepage = "https://github.com/MeltanoLabs/tap-dbt"
urls.Repository = "https://github.com/MeltanoLabs/tap-dbt"
scripts.tap-dbt = "tap_dbt.tap:cli"

[dependency-groups]
dev = [
  "deptry>=0.14.2",
  "faker>=17.6",
  "pytest~=8.0",
  "responses~=0.25.0",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88
src = [
  "tap_dbt",
  "tests",
]
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # missing-trailing-comma
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
]

lint.per-file-ignores."tests/*" = [
  "ANN201",
  "S101",
]
lint.unfixable = [
  "ERA001", # commented-out-code
]
lint.isort.known-first-party = [
  "tap_dbt",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.deptry]
known_first_party = [
  "tap_dbt",
]

[tool.deptry.package_module_name_map]
"backports-datetime-fromisoformat" = "backports.datetime_fromisoformat"
faker = "faker"
pytest = "pytest"
responses = "responses"

[tool.deptry.per_rule_ignores]
DEP001 = [ "backports" ]
DEP002 = [ "backports-datetime-fromisoformat", "requests" ]

[tool.uv]
required-version = ">=0.5.19"
