[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "tap-dbt"
description = "Singer tap for dbt, built with the Singer SDK."
readme = "README.md"
keywords = [
  "dbt",
  "elt",
  "singer-sdk",
  "singer.io",
]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "backports-datetime-fromisoformat~=2.0.1; python_full_version<'3.11'",
  "pyyaml~=6.0",
  "singer-sdk>=0.53.4,<0.55",
  "typing-extensions>=4.14.1",
]
[[project.authors]]
name = "Edgar Ramírez Mondragón"
email = "edgarrm358@sample.com"
[[project.maintainers]]
name = "Edgar Ramírez Mondragón"
email = "edgarrm358@sample.com"
[project.scripts]
tap-dbt = "tap_dbt.tap:cli"
[project.urls]
Documentation = "https://github.com/MeltanoLabs/tap-dbt/blob/main/README.md"
Homepage = "https://github.com/MeltanoLabs/tap-dbt"
Repository = "https://github.com/MeltanoLabs/tap-dbt"

[dependency-groups]
dev = [
  "deptry>=0.14.2",
  "faker>=17.6",
  "mypy>=1.19",
  "pytest>=9",
  "responses>=0.25,<0.27",
  "ty>=0.0.1a29",
  "types-pyyaml>=6.0.12.20250915",
  "types-requests>=2.32.4.20250809",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.uv]
required-version = ">=0.9"

[tool.ruff]
line-length = 88
src = [
  "tap_dbt",
  "tests",
]
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
]
per-file-ignores."tests/*" = [
  "ANN201",
  "S101",
]
unfixable = [
  "ERA001", # commented-out-code
]
isort.known-first-party = [
  "tap_dbt",
]
isort.required-imports = [
  "from __future__ import annotations",
]
pydocstyle.convention = "google"

[tool.deptry]
known_first_party = [
  "tap_dbt",
]
[tool.deptry.package_module_name_map]
backports-datetime-fromisoformat = "backports.datetime_fromisoformat"
[tool.deptry.per_rule_ignores]
DEP001 = [ "backports" ]
DEP002 = [ "backports-datetime-fromisoformat" ]

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_unused_configs = true

[tool.pytest]
addopts = [ "-ra" ]
filterwarnings = [
  "error",
  """\
  once:The function singer_sdk.testing.get_standard_tap_tests is deprecated and will be removed in a future release. \
  Use get_tap_test_class instead:DeprecationWarning\
  """,
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]
